* compile.c (iseq_compile_each): call on special object instead of   self.  since stabby lambda is a syntax, so it should not be   affected by the context.  [ruby-core:42349][Bug #5966] * insns.def (send): no special deal for FCALL.  self should be put   on TOS instead.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34819 b2dd03c8-39d4-4d8f-98ff-823fe69b080e